# autonomy

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  SConstruct  pyproject.toml
.github/workflows/: ci.yml  docker.yml  test_messenger.yml  test_mutations.yml
common/: README.md  ratekeeper.py
common/params/: params.h  params.py  params_pyx.pyx
common/params/tests/: test_params.py
common/tests/: test_ratekeeper.py  test_ratekeeper_integration.py
daemon/: __main__.py
driving_model_scripts/: README.md  merge.py  validate_model.py
driving_model_scripts/tests/: test_merge.py  test_validate_model.py
driving_model_scripts/tests/debug/broken_model/: driving_policy.onnx  no_weights.onnx
messaging/: README.md  autonomy.capnp  messenger.py  services.yaml
messaging/debug/: debug_messenger.py
messaging/tests/: test_memory.py  test_messenger.py
navigation/: README.md  nav_manager.py  navigationd.py
navigation/common/: __init__.py  capnp.py  navigation.capnp
navigation/common/params/: SConscript  SConstruct  __init__.py  libmapbox_token.dylib  mapbox_token_bin  params.cpp  params.h  params.json  params.py  params_pyx.pyx
navigation/common/params/tests/: test_params.py
navigation/debug/: README.md  livelocationd.py  nav_simulator.py
navigation/debug/simulation_videos/: route_map.html
navigation/navd/: helpers.py
navigation/navigation_helpers/: __init__.py  mapbox_integration.py  nav_instructions.py
navigation/navigation_helpers/tests/: __init__.py  test_mapbox.py
navigation/tests/: test_nav_manager.py
system/: README.md  manager.py
system/debug/: manager.py
system/tests/: test_manager.py  test_manager_submaster.py
tools/scripts/: README.md  lint.sh  test_mutations.sh
tools/setup/: README.md  mac_setup.sh  ubuntu_setup.sh
