[tool.setuptools.packages.find]
include = ["tools"]

[project]
name = "autonomy"
version = "0.1.0"
description = "Machine learning components for sunnypilot"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "hypothesis == 6.47.*",
    "matplotlib",
    "pycapnp",
    "requests",
    "types-requests",
    "contextily",
    "cartopy",
    "cython",
    "pyzmq>=27.1.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.optional-dependencies]
testing = [
    "codespell",
    "mypy",
    "pre-commit-hooks",
    "pytest",
    "pytest-cov>=5.0.0",
    "pytest-subtests",
    "pytest-timeout",
    "pytest-randomly",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-repeat",
    "ruff",
    "mutmut",
    "jq",
    "scons",
    "psutil>=7.1.0",
]
dev = [
    "einops>=0.8.0",
    "einx>=0.3.0",
    "datasets == 4.0.0",
    "dearpygui >= 2.1.0",
    "numpy >= 2.0",
    "onnx >= 1.14.0",
    "onnxruntime",
    "opencv-python-headless",
    "panda3d",
    "torch >= 2.3.0",
    "torchvision >= 0.18.0",
    "ultralytics",
    "vector-quantize-pytorch",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
# third-party packages
ignore_missing_imports=true

# helpful warnings
warn_redundant_casts=true
warn_unreachable=true
warn_unused_ignores=true

# restrict dynamic typing
warn_return_any=true

# allow implicit optionals for default args
implicit_optional = true

local_partial_types=true
explicit_package_bases=true
disable_error_code = "annotation-unchecked"

[tool.pytest]
addopts = "--ignore=mutants"

[tool.mutmut]
paths_to_mutate = ["messaging", "navigation", "system"]
test_command = "pytest -x --tb=short"
exclude = [".venv", ".venv/**", "/opt/venv", "/opt/venv/**", ".git", ".git/**"]
